[package]
name = "qemu-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
tokio = {version="1",features=["full"]}
async-process = "1.4.0"
futures-lite="1.12"
log = "0.4"
env_logger = "0.9.0"